# catalog-service

./: .env.example  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 8ae4f4d7264c_init_migration.py
specs/: WAL.md
specs/common/: catalog-api-specs.yaml  catalog-specs.md  catalog.sql
src/: app.py
src/api/: __init__.py  deps.py  exceptions.py
src/api/v1/: __init__.py  categories.py  health.py  offers.py  products.py  reviews.py
src/config/: logging.py  settings.py
src/db/: session.py
src/middleware/: error_handler.py  request_context.py
src/models/: __init__.py  base.py  category.py  offer.py  offer_item.py  product.py  product_category.py  review.py
src/repositories/: __init__.py  base.py  category_repository.py  offer_repository.py  product_repository.py  review_repository.py
src/schemas/: __init__.py  auth.py  category.py  common.py  offer.py  product.py  review.py
src/services/: __init__.py  category_service.py  offer_service.py  product_service.py  review_service.py
