[project]
name = "catalog-service"
version = "1.0.0"
description = "Catalog Service - core catalog backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn[standard]>=0.32.0,<0.33.0",
  "sqlalchemy[asyncio]>=2.0.35,<2.1.0",
  "asyncpg>=0.30.0,<0.31.0",
  "alembic>=1.13.0,<1.14.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "structlog>=24.4.0,<25.0.0",
  "python-multipart>=0.0.12,<0.1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<0.25.0",
  "httpx>=0.27.0,<0.28.0",
  "mypy>=1.12.0,<2.0.0",
  "ruff>=0.7.0,<0.8.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src", "alembic", "README.md", "pyproject.toml", "main.py", ".env.example"]
